--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build:esm": "tsc",
         "build:cjs": "tsc -p tsconfig-cjs.json",
         "build": "npm run build:esm && npm run build:cjs",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest test/**/*.test.ts",
         "preinstall": "npx only-allow pnpm"
     },
     "repository": {
@@ -28,13 +28,17 @@
     },
     "homepage": "https://github.com/Kage0x3B/ts-json-schema-generator#readme",
     "devDependencies": {
+        "@types/jest": "^27.4.0",
         "@types/json-schema": "^7.0.9",
+        "@types/node": "^17.0.8",
         "@typescript-eslint/eslint-plugin": "^5.9.0",
         "@typescript-eslint/parser": "^5.9.0",
         "eslint": "^8.6.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "jest": "^27.4.7",
         "prettier": "^2.5.1",
+        "ts-jest": "^27.1.2",
         "typescript": "^4.5.4"
     },
     "dependencies": {
