--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,18 @@
 {
-  "compilerOptions": {
-    "target": "ES2017",
-    "outDir": "./lib/esm",
-    "module": "ES2015",
-    "declaration": true,
-    "lib": ["ESNext"],
-    "baseUrl": "./src",
-    "rootDir": "./src",
-    "strict": true,
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "declarationMap": true
-  },
-  "include": ["./src/**/*"]
+    "compilerOptions": {
+        "target": "ES2017",
+        "outDir": "./lib/esm",
+        "module": "ES2015",
+        "declaration": true,
+        "lib": ["ESNext"],
+        "baseUrl": "./src",
+        "strict": true,
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "declarationMap": true
+    },
+    "include": ["./src/**/*", "./test/**/*"]
 }
