Add npm prepare script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build:esm": "tsc",
         "build:cjs": "tsc -p tsconfig-cjs.json",
         "build": "npm run build:esm && npm run build:cjs",
+        "prepare": "npm run build",
         "test": "jest test/*.test.ts",
         "preinstall": "npx only-allow pnpm"
     },
