--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
         "experimentalDecorators": true,
         "declarationMap": true
     },
-    "include": ["./src/**/*", "./test/**/*"]
+    "include": ["./src/**/*"]
 }
